--- a/DND5eCharacterGeneratorCSharp/DND5eCharacterGeneratorCSharp.csproj
+++ b/DND5eCharacterGeneratorCSharp/DND5eCharacterGeneratorCSharp.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Character.cs" />
+    <Compile Include="Calcs.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
