--- a/DND5eCharacterGeneratorCSharp/DND5eCharacterGeneratorCSharp.csproj
+++ b/DND5eCharacterGeneratorCSharp/DND5eCharacterGeneratorCSharp.csproj
@@ -51,6 +51,18 @@
     <Compile Include="Character.cs" />
     <Compile Include="Calcs.cs" />
     <Compile Include="Feats.cs" />
+    <Compile Include="LoadToon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoadToon.Designer.cs">
+      <DependentUpon>LoadToon.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainMenu.Designer.cs">
+      <DependentUpon>MainMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,8 +72,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubraceSetup.cs" />
+    <EmbeddedResource Include="LoadToon.resx">
+      <DependentUpon>LoadToon.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainMenu.resx">
+      <DependentUpon>MainMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
