Partial completion of Skill Proficiency system

--- a/DND5eCharacterGeneratorCSharp/DND5eCharacterGeneratorCSharp.csproj
+++ b/DND5eCharacterGeneratorCSharp/DND5eCharacterGeneratorCSharp.csproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="Character.cs" />
     <Compile Include="Calcs.cs" />
+    <Compile Include="Gear.cs" />
     <Compile Include="ConfirmForm.cs">
       <SubType>Form</SubType>
     </Compile>
